Añadida fecha de registro a usuarios
